fixed adaptive height of slider images, plus arrow alignment. closes #112

--- a/source/css/partials/_gallery.scss
+++ b/source/css/partials/_gallery.scss
@@ -132,6 +132,7 @@ section.content-section.case-study {
 
       .slider-arrows {
         @extend %slider-arrows;
+        @include transition(top 500ms);
       }
     }
 
